# open-computer-use

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
os_computer_use/: agent.py  browser.py  browser_script.py  config.py  grounding.py  llama_utils.py  llm.py  llm_helpers.py  llm_provider.py  logging.py  models.py  osatlas_provider.py  output.ts  providers.py  sandbox.py  sandbox_agent.py  streaming.py  utils.py
os_computer_use/templates/: log.html
tests/: llm_provider.py  sandbox_agent.py
