[project]
name = "os-computer-use"
version = "0.1.0"
description = ""
authors = [{ name = "James Murdza", email = "james@jamesmurdza.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "e2b>=1.0.3,<2",
    "ipython>=8.29.0,<9",
    "python-dotenv>=1.0.1,<2",
    "gradio-client>=1.5.0,<2",
    "pillow>=11.0.0,<12",
    "e2b-desktop>=1.0.2,<2",
    "openai>=1.59.5,<2",
    "anthropic>=0.44.0,<0.45",
    "pyqtwebengine>=5.15.7,<6",
    "pywebview[qt]~=5.4",
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["os_computer_use/**"]
